# haskell-ast-evaluation

./: .gitignore  README.md
ghc-lib-parser/: Ejemplo.hs  README.md  ghc-lib-parser-prueba.cabal  ghc-lib-parser-test.cabal
ghc-lib-parser/src/: Main.hs
haskell-src-exts/: Ejemplo.hs  Example.hs  README.md  haskell-src-exts.cabal
haskell-src-exts/src/: Main.hs
