cabal-version:      3.0
name:               ghc-lib-parser-prueba
version:            0.1.0.0
synopsis:           Prueba de obtención de AST con ghc-lib-parser (infraestructura de HLS)
description:
  Proyecto de prueba para el análisis técnico de ghc-lib-parser,
  la biblioteca de parsing que usa internamente haskell-language-server.
  Demuestra la extracción del AST usando el parser real de GHC.
author:             Saraqch
maintainer:         quispechoquesara@gmail.com

executable ghc-lib-parser-prueba
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        base              >= 4.14 && < 5,
        directory         >= 1.3,
        ghc-lib-parser    == 9.6.7.20250325
