cabal-version:      3.0
name:               haskell-src-exts-test
version:            0.1.0.0
synopsis:           AST extraction test with haskell-src-exts
description:
  Test project for the technical analysis of the
  haskell-src-exts library as a tool to obtain the
  syntax tree of Haskell code.
author:             Saraqch
maintainer:         quispechoquesara@gmail.com

executable haskell-src-exts-test
    main-is:          Main.hs
    hs-source-dirs:   src
    default-language: Haskell2010
    build-depends:
        directory ^>=1.3.8.5,
        base          >= 4.14 && < 5,
        haskell-src-exts == 1.23.1
         

